<resources>
    <string name="app_name">学习程序</string>
    <string name="takephoto">拍照演示</string>
    <string name="sqlite">数据库演示</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="email">邮箱地址</string>
    <string name="register">注册</string>
    <string name="volleyUsage">Volley使用</string>
    <string name="title_activity_volley">VolleyActivity</string>
    <string name="RetrieveJson">获取Json数据</string>
    <string name="RetrievePic">获取图片</string>
    <string name="volleyPic">Volley获取图片</string>
    <string name="smsDemo">短信拦截</string>
    <string name="startSmsIntersection">开启短信拦截</string>
    <string name="stopSmsIntersection">停止短信拦截</string>
    <string name="customizeProgress">自定义进度条</string>
    <string name="startDownload">点击下载</string>
    <string name="customzieCircleProgress">圆形进度条</string>
    <string name="percent">百分比</string>
    <string name="imageView">ImageView</string>
    <string name="viewPager">无限轮播</string>
    <string name="picDiscription">图片描述</string>
    <string name="differentDialog">各种对话框</string>
    <string name="notifyDialog">通知对话框</string>
    <string name="singleDialog">单选对话框</string>
    <string name="multiDialog">多选对话框</string>
    <string name="progressDialog">进度对话框</string>
    <string name="listDialog">列表对话框</string>
    <string name="recyclerView">RecyclerView</string>
    <string name="recyclerListViewSimpleDivider">模拟ListView使用普通分割线</string>
    <string name="stringone">1</string>
    <string name="recyclerListViewItemDecoration">模拟ListView使用ItemDecoration分割</string>
    <string name="recyclerGridView">模拟GridView</string>
    <string name="recyclerStagger">模拟瀑布流</string>
    <string name="simulatecalculate">模拟计算器</string>
    <string name="string0">0</string>
    <string name="stringac">AC</string>
    <string name="stringaddsub">+/-</string>
    <string name="stringpercent">%</string>
    <string name="stringdivider">/</string>
    <string name="string7">7</string>
    <string name="string8">8</string>
    <string name="string9">9</string>
    <string name="stringmulti">*</string>
    <string name="string4">4</string>
    <string name="string5">5</string>
    <string name="string6">6</string>
    <string name="stringsub">-</string>
    <string name="stringdot">.</string>
    <string name="stringequal">=</string>
    <string name="string1">1</string>
    <string name="string2">2</string>
    <string name="string3">3</string>
    <string name="stringadd">+</string>
</resources>
