<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recyclerviewdemo.RecyclerViewDemoActivity">

    <Button
        android:id="@+id/btnRecyclerListViewSimpleDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:text="@string/recyclerListViewSimpleDivider"
        android:onClick="onRecyclerViewClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRecyclerListViewItemDecoration"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recyclerListViewItemDecoration"
        android:onClick="onRecyclerViewClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecyclerListViewSimpleDivider" />

    <Button
        android:id="@+id/btnRecyclerGridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:onClick="onRecyclerViewClick"
        android:text="@string/recyclerGridView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecyclerListViewItemDecoration" />

    <Button
        android:id="@+id/btnRecyclerStaggerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:onClick="onRecyclerViewClick"
        android:text="@string/recyclerStagger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecyclerGridView" />
</androidx.constraintlayout.widget.ConstraintLayout>